# infoskjerm-trondheim

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  run.sh  screenshot.xwd  update.py
.github/workflows/: build_and_release.yml  build_and_release_zigbuild.yml  rust.yml  take_screenshot.yml
img/: calendar.ics
src/: lib.rs  main.rs  transportation.rs  weather.rs  xkcd.rs
src/calendar/: calendar_models.rs  mod.rs  server.rs  storage.rs
src/datetime/: mod.rs
src/food/: ADCimwTiJkUkM3TOKT7w9g.json  ADCimwTiJkUkM3TOKT7w9g_done.json  index.html  mod.rs  server.rs  wolt_group_models.rs  wolt_models.rs  worker.rs
src/forecast/: forecast_models.rs  mod.rs
src/resources/: journey-planner_query.graphql  journey-planner_schema.json
src/seasons/: december.rs  halloween.rs  mod.rs
src/selfie/: mod.rs
src/transportation/: journey-planner_query.graphql  journey-planner_schema.json  mod.rs  trackedStops.json  transportation_models.rs
src/weather/: mod.rs  models.rs  weather_models.rs
src/xkcd/: mod.rs
templates/: calendar.html
ui/: appwindow.slint  calendarwidget.slint  foodtrackerwidget.slint  forecastwidget.slint  mainwindow.slint  seasons.slint  transportation.slint  utils.slint  weatherwidget.slint  xkcdwidget.slint
