[package]
name = "infoskjerm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
selfie = []

[dependencies]
chrono = { version = "0.4.26", features = ["serde", "unstable-locales"] }
image = "0.24.7"
graphql_client = { version = "0.13.0" }
reqwest = { version = "0.11.23", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "3.4.0"
slint = { git = "https://github.com/slint-ui/slint", branch = "master", default-features = true, features = [
    "backend-winit-wayland",
    "renderer-femtovg",
    "compat-1-2",
    "backend-linuxkms",
] }
rust-embed = "8.5.0"
log = "0.4.20"
env_logger = "0.10.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tide = "0.16.0"
ical = "0.10"
rand = "0.8.5"
unicode-segmentation = "1.11.0"

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint", branch = "master" }
